# sudoku_dlx

./: .gitignore  AUTHORS  BUILDING.txt  BUILDnTEST.md  CMakeLists.txt  ChangeLog  INSTALL  LICENSE  Makefile.am  NEWS  README  README.md  bootstrap  configure.ac  mrproper  sudoku_dlx_config.h.in  sudoku_dlx_config.hpp.in  usage_examples.txt
include/: Makefile.am  jmdlx.h
lib/: Makefile.am  jmdlx.cpp
src/: CMakeLists.txt  Makefile.am  sudoku_main.cpp  sudoku_squares.h
test/: CMakeLists.txt  CMakeLists.txt.in  CityTest.cpp  SudokuDlxTest.cpp  sudoku_dlx_test.cpp
