#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(jmd_dlx, 0.1)dnl optional 3rd arg: BUG-REPORT-ADDRESS
dnl AC_CONFIG_SRCDIR([config.h.in]) currently unused
dnl AC_CONFIG_HEADER([config.h])
AM_INIT_AUTOMAKE([foreign])
AC_REVISION($Revision: 1.1 $)dnl
AM_MAINTAINER_MODE


# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
dnl AC_PROG_LIBTOOL

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
dnl AC_HEADER_STDBOOL
dnl AC_C_CONST
dnl AC_TYPE_SIZE_T

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 include/Makefile
                 src/Makefile])
AC_OUTPUT
